<resources>

    <string name="app_name">MemberMobile</string>
    <string name="bl_dynpermission_info">获取%s权限失败，请前往设置中心设置。</string>
    <string name="bl_dynpermission_storage">手机存储</string>
    <string name="bl_dynpermission_camera">相机</string>
    <string name="bl_dynpermission_wifi">开启WIFI</string>
    <string name="bl_dynpermission_phone">手机信息</string>
    <string name="bl_dynpermission_audio">录音</string>
    <string name="bl_dynpermission_location">定位</string>
    <string name="bl_dynpermission_contacts">读取联系人</string>

    <string name="shortcuts_publish_weibo_short_name">发微博</string>
    <string name="shortcuts_publish_weibo_long_name">发微博</string>
    <string name="shortcuts_publish_weibo_long_disable_msg">发微博不可用</string>
    <string name="shortcuts_popular_weibo_short_name">热门微博</string>
    <string name="shortcuts_popular_weibo_long_name">热门微博</string>
    <string name="shortcuts_popular_weibo_disable_msg">热门微博不可用</string>
    <string name="shortcuts_qrcord_short_name">扫一扫</string>
    <string name="shortcuts_qrcord_long_name">扫一扫</string>
    <string name="shortcuts_qrcord_disable_msg">扫一扫不可用</string>

</resources>
